css/main.css
:root {
  --font-sans: "Poppins", sans-serif;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

ul {
  list-style: none;
}

a {
  text-decoration: none;
}

p {
  font-size: var(--font-size-2);
}

body {
  font-family: var(--font-sans);
  color: var(--gray-12);
  line-height: 1.6;
  position: relative;
}
.backdrop {
  display: none;
}

header {
  position: relative;
}
header a {
  color: var(--gray-8);
}

.container {
  width: min(68rem, 90%);
  margin: auto;
  padding: var(--size-2);
}

header .container {
  width: min(50rem, 90%);
  position: fixed;
  top: 0.5rem;
  left: calc(50% - 32.5rem);
  background-color: #ffffff;
  z-index: 10;
}

.flex {
  display: flex;
  flex-flow: row wrap;
  align-items: center;
}

header .container.flex {
  justify-content: space-between;
}

#logo {
  flex: 1;
  font-size: var(--font-size-4);
  font-weight: var(--font-weight-8);
  color: var(--gray-12);
}

#main-nav {
  flex: 3;
}

#main-nav .nav {
  justify-content: space-around;
}

.nav-item a {
  font-weight: var(--font-weight-4);
  padding-inline: var(--size-5);
  padding-block: var(--size-2);
}

.nav-item a:hover {
  color: var(--orange-5);
}

#hero {
  min-height: 100vh;
  background: url(/images/banner-bg.png);
  background-repeat: no-repeat;
  background-position: right top;
  background-size: contain;
}

#hero .container.flex {
  height: 100vh;
  justify-content: flex-start;
  align-items: center;
}

.hero-text {
  flex: 2;
}

.flex-control {
  flex: 3;
}

.hero-text.flex {
  flex-flow: column wrap;
  justify-content: space-between;
  align-items: flex-start;
}

.hero-text h2 {
  font-size: var(--font-size-6);
  font-weight: var(--font-weight-8);
  padding-block-end: var(--size-5);
}

.hero-text p {
  color: var(--gray-8);
  margin-block-end: var(--size-5);
}

.btn {
  background-color: var(--orange-5);
  color: var(--gray-0);
  padding-inline: var(--size-5);
  padding-block: var(--size-2);
  border-radius: var(--radius-5);
}

.btn:hover {
  background-color: var(--purple-4);
}

span.primary-color {
  color: var(--orange-5);
}

#about {
  margin-block: var(--size-10);
  padding-block: var(--size-7);
}
.grid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: var(--size-7);
  justify-content: center;
}

.card {
  padding: var(--size-5);
  padding: var(--size-5);
  border: 1px solid var(--gray-2);
  border-radius: var(--radius-3);
  box-shadow: var(--shadow-4);
}

#features.grid {
  grid-template-columns: repeat(3, 1fr);
}

.feature.flex {
  flex-flow: column wrap;
  justify-content: space-between;
  align-items: center;
  text-align: center;
}

.feature h3 {
  font-size: var(--font-size-4);
  font-weight: var(--font-weight-6);
  margin-block: var(--size-3);
}

.feature p {
  margin-block-end: var(--size-5);
  color: var(--gray-8);
}

.decoration {
  position: relative;
  top: -12.5rem;
}

.decoration img {
  position: absolute;
  top: 0;
}

#promotion {
  padding-block: var(--size-5);
  margin-top: var(--size-12);
}

#promotion.container {
  align-items: center;
}
.promotion-items {
  flex-direction: column;
  justify-content: space-between;
}
.promotion-item {
  margin-block: var(--size-5);
  align-items: flex-start;
}
.promotion-item-image {
  flex: 1;
}
.promotion-item-text {
  flex: 3;
}

.promotion-item-text h3 {
  font-size: var(--font-size-3);
  font-weight: var(--font-weight-6);
}

.promotion-item-text p {
  color: var(--gray-8);
}

.decoration.right img {
  right: 0;
}

#testimonials {
  padding-block: var(--size-5);
  margin-top: var(--size-12);
}

.testimonials-header {
  text-align: center;
}

.testimonials-header h2 {
  font-size: var(--font-size-6);
  font-weight: var(--font-weight-8);
  padding-block-end: var(--size-5);
}

.testimonials-header p {
  color: var(--gray-8);
}

.statements {
  margin-block-start: var(--size-12);
}

.testimonial-statements {
  gap: var(--size-12);
}
.testimonial-statement {
  text-align: center;
  background-color: var(--orange-5);
  border-radius: var(--radius-3);
  padding-inline: var(--size-3);
  padding-block: var(--size-10);
  box-shadow: var(--shadow-4);
  position: relative;
}

.testimonial-statement-image {
  position: absolute;
  top: -4rem;
  left: -4rem;
}
.testimonial-statement-content {
}
.testimonial-statement-ratting i {
  color: var(--gray-0);
}
.testimonial-statement-text p {
  color: var(--gray-0);
  margin-block: var(--size-5);
}
.testimonial-statement-author-title {
  color: var(--gray-0);
  font-size: var(--font-size-0);
}

#slant {
  height: 20rem;
  position: relative;
  left: 0;
  top: var(--size-12);
  background-color: #ffffff;
  transform: skewy(-18deg);
}

#main-footer {
  margin-top: var(--size-10);
  padding-block-start: var(--size-12);
  background-color: var(--red-6);
}
form {
  background-color: var(--gray-0);
  text-align: center;
  z-index: 5;
}

.user-contact {
  justify-content: space-between;
}

.user-contact input {
  width: 45%;
  padding: var(--size-3);
  margin-block: var(--size-3);
  border-radius: var(--radius-2);
  border: 1px solid var(--gray-5);
}

textarea {
  width: 100%;
  border-radius: var(--radius-2);
  border: 1px solid var(--gray-5);
  padding: var(--size-3);
  resize: none;
  font: inherit;
}

.btn-control {
  margin-block: var(--size-5);
}

.footer-text {
  flex-direction: column;
  justify-content: flex-start;
  color: var(--gray-0);
  align-items: flex-start;
}
.footer-text h2 {
  font-size: var(--font-size-6);
  font-weight: var(--font-weight-8);
  margin-block-end: var(--size-5);
}
.footer-text p {
  margin-block-end: var(--size-5);
}
.socials {
  width: 40%;
  justify-content: space-between;
}

.socials a {
  color: var(--gray-1);
}

.line {
  margin-block: var(--size-10) 0;
  border-bottom: 1px solid var(--gray-0);
}

.copy-right {
  text-align: center;
  margin-block: var(--size-7);
}

.copy-right p {
  color: var(--gray-0);
}

